# quad

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
macros/: Cargo.toml
macros/src/: bundle.rs  component.rs  event.rs  lib.rs  param_set.rs  resource.rs
src/: app.rs  asset.rs  audio.rs  builder.rs  context.rs  ecs.rs  input.rs  lib.rs  logging.rs  macros.rs  pipeline.rs  quad.rs  render.rs  run.rs  scene.rs  sprite.rs  task.rs  tasks.rs  text.rs  time.rs  timing.rs  transform.rs  ty.rs  ui.rs  windowing.rs
src/app/: app.rs  builder.rs  context.rs  event.rs  mod.rs  runner.rs  stage.rs  system.rs  systems.rs  task_pool_options.rs
src/asset/: asset_server.rs  assets.rs  handle.rs  info.rs  io.rs  loader.rs  mod.rs  path.rs
src/asset/io/: file_asset_io.rs  mod.rs
src/audio/: audio.rs  audio_output.rs  audio_source.rs
src/core/: builder.rs  context.rs  mod.rs  quad.rs  scene.rs
src/data/: arena.rs  mod.rs  stack.rs
src/ecs/: archetype.rs  bundle.rs  component.rs  entity.rs  event.rs  macros.rs  mod.rs  query.rs  resource.rs  schedule.rs  system.rs  world.rs
src/ecs/component/: bundle.rs  change_detection.rs  component.rs  mod.rs  resource.rs  ticks.rs  type_info.rs
src/ecs/entity/: archetype.rs  entity.rs  mod.rs
src/ecs/query/: access.rs  fetch.rs  filter.rs  iter.rs  mod.rs  state.rs
src/ecs/resource/: mod.rs
src/ecs/schedule/: chain_system.rs  executor.rs  mod.rs
src/ecs/storage/: blob_vec.rs  mod.rs  table.rs
src/ecs/system/: command.rs  event.rs  function_system.rs  local.rs  local_param.rs  mod.rs  query.rs  query_param.rs  removed_components.rs  resource.rs  resource_param.rs  run_system.rs  system_param.rs
src/ecs/world/: entity_ref.rs  mod.rs
src/input/: button.rs  converter.rs  gamepad.rs  keyboard.rs  keycode.rs  mod.rs  mouse.rs  touch.rs
src/pipeline/: clear_pass.rs  clear_pass_driver.rs  main_pass_2d.rs  main_pass_driver.rs
src/reflect/: mod.rs  type_uuid.rs
src/render/: cameras.rs  color.rs  extract_param.rs  mesh.rs  options.rs  primitives.rs  render_asset.rs  render_component.rs  render_phase.rs  render_resource.rs  renderer.rs  settings.rs  spatial_bundle.rs  texture.rs  view.rs
src/render/cameras/: active_cameras.rs  bundle.rs  camera.rs  projection.rs
src/render/mesh/: mesh.rs  shape.rs
src/run/: context.rs  quad.rs  runner.rs  scene.rs
src/sprite/: bundle.rs  collide_aabb.rs  dynamic_texture_atlas_builder.rs  rect.rs  render.rs  sprite.rs  texture_atlas.rs  texture_atlas_builder.rs
src/struct/: arena.rs  mod.rs  stack.rs
src/task/: task_pool.rs
src/tasks/: task.rs  task_pool.rs  usages.rs
src/text/: font.rs  font_atlas.rs  font_atlas_set.rs  font_loader.rs  glyph_brush.rs  pipeline.rs  render.rs  text.rs  text2d.rs
src/time/: mod.rs  time.rs  timer.rs
src/timing/: stopwatch.rs  time.rs
src/transform/: children.rs  global_transform.rs  mod.rs  parent.rs  transform.rs  transform_propagate_system.rs
src/ty/: float.rs  future.rs  math.rs  mod.rs
src/ui/: entity.rs  focus.rs  geometry.rs  ui_node.rs  update.rs
src/window/: builder.rs  event.rs  mod.rs  size.rs  window.rs
src/windowing/: event.rs  handle.rs  size.rs  window.rs  windows.rs
src/world/: mod.rs  resource.rs  world.rs
(+56 files in other folders)
