[package]
name = "quad"
version = "0.0.1"
authors = ["odanek <ondrej.danek@gmail.com>"]
edition = "2021"
description = "Rust Game Engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/odanek/quad"

[dependencies]
quad_macros = { path = "macros", version = "0.0.1" }
cgm = { path = "../cgm" }
anyhow = "1.0.79"
thiserror = "1.0.56"
winit = {version = "0.29.10"}
raw-window-handle = "0.6.0"
log = "0.4.20"
image = "0.25.0"
downcast-rs = "1.2.0"
crossbeam-channel = "0.5.11"
futures-lite = "2.2.0"
async-channel = "2.2.0"
async-executor = "1.8.0"
parking_lot = "0.12.1"
wgpu = "0.19.1"
naga = { version = "0.19.0", features = ["wgsl-in"] }
hex = "0.4.3"
bytemuck = { version = "1.14.2", features = ["derive"] }
crevice = "0.15.0"
rectangle-pack = "0.4.2"
guillotiere = "0.6.2"
ab_glyph = "0.2.23"
glyph_brush_layout = "0.2.3"
derive_deref = "1.1.1"
rodio = { version = "0.17.3", default-features = false, features = ["vorbis"] }
taffy = { version = "0.3.18", default-features = false, features = ["std"] }
smol_str = "0.2.1"